default/objects/Contact_Extended_Field__c/Contact_Extended_Field__c.object-meta.xml
<CustomObject>
    <label>Contact Extended Field</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contact Extended Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Extended Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>