default/objects/Contact_Extended_Field__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Extended Fields</relationshipLabel>
    <relationshipName>Contact_Extended_Fields</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>