default/objects/Contact_Extended_Field__c/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influence</label>
    <referenceTo>pq_Influence__c</referenceTo>
    <relationshipLabel>Contact Extended Fields</relationshipLabel>
    <relationshipName>Contact_Extended_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>