default/objects/Contact_Extended_Field__c/fields/Profile_Picture_Data__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_Data__c</fullName>
    <description>The base64 data of the image</description>
    <label>Profile Picture Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>