default/objects/Contact_Extended_Field__c/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support</label>
    <referenceTo>pq_Support__c</referenceTo>
    <relationshipLabel>Contact Extended Fields</relationshipLabel>
    <relationshipName>Contact_Extended_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>